<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".filehandelingExample.fileHandelingExampleOne">

    <EditText
        android:id="@+id/edtwritedata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/write_your_text"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/namea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button14"
        android:layout_width="196dp"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:onClick="save_text_into_file"
        android:text="@string/save_file"
        app:layout_constraintEnd_toEndOf="@+id/edtwritedata"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/edtwritedata"
        app:layout_constraintTop_toBottomOf="@+id/edtwritedata" />

    <Button
        android:id="@+id/button15"
        android:layout_width="187dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:onClick="show_data_from_file"
        android:text="@string/show_file"
        app:layout_constraintEnd_toEndOf="@+id/button14"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button14"
        app:layout_constraintTop_toBottomOf="@+id/button14" />

    <TextView
        android:id="@+id/txtfileshowdata"
        android:layout_width="288dp"
        android:layout_height="153dp"
        android:layout_marginTop="128dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button15" />
</androidx.constraintlayout.widget.ConstraintLayout>