<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5B9BD5"
    tools:context="task2.Student_Activity_One">

    <LinearLayout
        android:id="@+id/mainLinearLayout"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="name"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="75dp"

                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/cnic"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editCnic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="75dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="Cinic No."
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/phone"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="75dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="Mobile No."
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/cgap"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editCGPA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="75dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="CGPA"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginStart="150dp"
                android:layout_marginTop="40dp"
                android:background="#000000"
                android:backgroundTint="#000000"
                android:onClick="send_data"
                android:text="Send" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>